# smooth-contact-aware-facial-blendshape-transfer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmakes/: libigl.cmake  pcl.cmake  spdlog.cmake  yaml-cpp.cmake
src/: CMakeLists.txt  Mesh.h  Primitives.h  deformation_gradient.cpp  deformation_gradient.h  deformation_transfer.cpp  deformation_trasnfer.h  dg_solver.cpp  dg_solver.h  pretty_log.h  sample_viewer.h
tests/: CMakeLists.txt  bit_flag_test.cpp  closest_test.cpp  sample_main.cpp  small_example.cpp
